@@ -204,16 +204,19 @@ public class ParallelReader extends IndexReader {
   
   @Override
   public Bits getLiveDocs() {
+    ensureOpen();
     return MultiFields.getLiveDocs(readers.get(0));
   }
 
   @Override
   public Fields fields() {
+    ensureOpen();
     return fields;
   }
   
   @Override
   public synchronized Object clone() {
+    // doReopen calls ensureOpen
     try {
       return doReopen(true);
     } catch (Exception ex) {
@@ -242,6 +245,7 @@ public class ParallelReader extends IndexReader {
    */
   @Override
   public synchronized IndexReader reopen() throws CorruptIndexException, IOException {
+    // doReopen calls ensureOpen
     return doReopen(false);
   }
     
@@ -325,7 +329,7 @@ public class ParallelReader extends IndexReader {
 
   @Override
   public boolean hasDeletions() {
-    // Don't call ensureOpen() here (it could affect performance)
+    ensureOpen();
     return hasDeletions;
   }
 
@@ -461,6 +465,7 @@ public class ParallelReader extends IndexReader {
    */
   @Override
   public boolean isCurrent() throws CorruptIndexException, IOException {
+    ensureOpen();
     for (final IndexReader reader : readers) {
       if (!reader.isCurrent()) {
         return false;
@@ -476,6 +481,7 @@ public class ParallelReader extends IndexReader {
    */
   @Override
   public boolean isOptimized() {
+    ensureOpen();
     for (final IndexReader reader : readers) {
       if (!reader.isOptimized()) {
         return false;
@@ -527,8 +533,10 @@ public class ParallelReader extends IndexReader {
     }
     return fieldSet;
   }
+
   @Override
   public ReaderContext getTopReaderContext() {
+    ensureOpen();
     return topLevelReaderContext;
   }
 
@@ -550,6 +558,7 @@ public class ParallelReader extends IndexReader {
 
   @Override
   public PerDocValues perDocValues() throws IOException {
+    ensureOpen();
     return perDocs;
   }
   
